--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gh-pages": "^5.0.0",
     "json-server": "^0.17.3",
     "material-icons": "^1.13.9",
+    "mui-tel-input": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
