--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
-    "react-sweetalert2": "^0.6.0",
+    "sweetalert2": "^11.7.22",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
