Added proxy script

--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "api": "json-server --watch server-api/db.json --port 3031"
   },
+  "proxy": "http://localhost:3031",
   "eslintConfig": {
     "extends": [
       "react-app",
