--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material/menu": "^14.0.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "@supabase/supabase-js": "^2.32.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-supabase": "^0.2.0",
     "sweetalert2": "^11.7.22",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
@@ -29,10 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "api": "json-server --watch server-api/db.json --port 3031"
+    "deploy": "gh-pages -d build"
   },
-  "proxy": "http://localhost:3031",
   "eslintConfig": {
     "extends": [
       "react-app",
