--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "framer-motion": "^10.15.1",
     "gh-pages": "^5.0.0",
     "json-server": "^0.17.3",
     "material-icons": "^1.13.9",
